// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components: TimeAgo [snapshot] TimeAgo 1`] = `
<div>
  <p>
    just now
  </p>
</div>
`;

exports[`components: TimeAgo [snapshot] TimeAgo with custom locale register 1`] = `
<div>
  <p>
    1 分鐘前
  </p>
</div>
`;

exports[`components: TimeAgo [snapshot] TimeAgo with update timer 1`] = `
<div>
  <p>
    1 minute ago
  </p>
</div>
`;
